# ChangeLog for net-p2p/dclib
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.83 2007/09/04 12:43:52 angelos Exp $

  04 Sep 2007; Christoph Mende <angelos@gentoo.org> dclib-0.3.10.ebuild:
  Stable on amd64 wrt bug #186352

  01 Sep 2007; nixnut <nixnut@gentoo.org> dclib-0.3.10.ebuild:
  Stable on ppc wrt bug 186352

  28 Aug 2007; Raúl Porcel <armin76@gentoo.org> dclib-0.3.10.ebuild:
  alpha/ia64/x86 stable wrt #186352

  28 Aug 2007; Jeroen Roovers <jer@gentoo.org> dclib-0.3.10.ebuild:
  Stable for HPPA again (bug #186352).

  27 Aug 2007; Christoph Mende <angelos@gentoo.org> dclib-0.3.9.ebuild:
  Stable on amd64 wrt bug #186352

  22 Aug 2007; Jeroen Roovers <jer@gentoo.org> dclib-0.3.9.ebuild:
  Stable for HPPA (bug #186352).

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> dclib-0.3.9.ebuild:
  Stable on ppc64; bug #186352

  28 Jul 2007; nixnut <nixnut@gentoo.org> dclib-0.3.9.ebuild:
  Stable on ppc wrt bug 186352

*dclib-0.3.10 (23 Jul 2007)

  23 Jul 2007; Raúl Porcel <armin76@gentoo.org> dclib-0.3.9.ebuild,
  +dclib-0.3.10.ebuild:
  alpha/ia64/x86 stable and version bump, bug 184022

*dclib-0.3.9 (12 May 2007)

  12 May 2007; Raúl Porcel <armin76@gentoo.org> +dclib-0.3.9.ebuild:
  Version bump, bug 178115

  13 Mar 2007; Raúl Porcel <armin76@gentoo.org> dclib-0.3.8.ebuild:
  Fix HOMEPAGE

*dclib-0.3.8 (10 Jan 2007)

  10 Jan 2007; Raúl Porcel <armin76@gentoo.org>
  -files/dclib-0.2.20-gcc2.patch, -files/dclib-0.2.21-gcc2.patch,
  -files/dclib-0.3.0-gcc2.patch, -files/dclib-0.3.3-gcc2.patch,
  -files/dclib-0.3.3-xml.patch, -files/dclib-0.3.5-gcc2.patch,
  -dclib-0.2.20.ebuild, -dclib-0.2.21.ebuild, -dclib-0.3.0.ebuild,
  -dclib-0.3.3.ebuild, -dclib-0.3.3-r1.ebuild, -dclib-0.3.5.ebuild,
  dclib-0.3.7.ebuild, +dclib-0.3.8.ebuild:
  Drop old, version bump, bug 156051

  01 Oct 2006; Jeroen Roovers <jer@gentoo.org> dclib-0.3.7.ebuild:
  Stable for HPPA (bug #140724).
