@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/Attic/dclib-0.3.10.ebuild,v 1.5 2007/09/04 12:43:52 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/Attic/dclib-0.3.10.ebuild,v 1.6 2007/09/09 16:51:52 corsair Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/wxdcgui/${P}.tar.bz2"
 IUSE=""
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ~ppc64 x86"
+KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 x86"
 
 DEPEND=">=app-arch/bzip2-1.0.2
 	>=dev-libs/libxml2-2.4.22"
