@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/valknut
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/valknut/ChangeLog,v 1.44 2007/09/04 12:44:15 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/valknut/ChangeLog,v 1.45 2007/09/09 16:52:54 corsair Exp $
+
+  09 Sep 2007; Markus Rothe <corsair@gentoo.org> valknut-0.3.10.ebuild:
+  Stable on ppc64; bug #186352
 
   04 Sep 2007; Christoph Mende <angelos@gentoo.org> valknut-0.3.10.ebuild:
   Stable on amd64 wrt bug #186352
