@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/dclib
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.83 2007/09/04 12:43:52 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.84 2007/09/09 16:51:52 corsair Exp $
+
+  09 Sep 2007; Markus Rothe <corsair@gentoo.org> dclib-0.3.10.ebuild:
+  Stable on ppc64; bug #186352
 
   04 Sep 2007; Christoph Mende <angelos@gentoo.org> dclib-0.3.10.ebuild:
   Stable on amd64 wrt bug #186352
